--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,6 +14,7 @@
 <body>
   <header>
     <h1>Config Manager</h1>
+    <p class="subtitle">{ <span class="key">'Public'</span>: <span class="value">'configuration variables'</span> }</p>
   </header>
 
   <main>
