--- a/app/src/style.css
+++ b/app/src/style.css
@@ -60,3 +60,12 @@ div.overlay {
   height: 100%;
   background-color: #000000C9;
 }
+
+footer > a {
+  color: #DCDCDC !important;
+  text-decoration: none;
+}
+
+footer > a:hover {
+  text-decoration: underline;
+}
